# IVP

./: 2_🔍Consulta.py  3_📊Financeiro.py  PAGE  Pagina_inicial.py  README.md  clientes.csv  pyproject.toml
PAGE/: 1_📝Cadastro.py
pages/: 4_🧾Gerar.py
