[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Russel-data <wallissom12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pandas = "^2.2.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
plotly-express = "^0.4.1"
reportlab = "^4.2.2"
fpdf = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
